vac-rs/crates/surfaces/tui/src/bottom_pane/snapshots/vac_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask VAC to do anything                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                100% context left  "
